Activation actions pour les premiers tests